--- a/webapp/root_files/appConfig.json
+++ b/webapp/root_files/appConfig.json
@@ -2,5 +2,6 @@
     "appName": "Wax Loop",
     "appCompanyPossessive": "Stoic Dreams'",
     "appCompanySingular": "Stoic Dreams",
-    "appApi": "https://api.myfi.ws"
+    "appApi": "https://api.myfi.ws",
+    "rolesApi": "user/roles"
 }
